--- a/frontend/src/components/SideDrawer/SideDrawer.css
+++ b/frontend/src/components/SideDrawer/SideDrawer.css
@@ -1,6 +1,6 @@
 .side-drawer {
   height: 100%;
-  background: #fe4066;
+  background: #ec008a;
   box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
